Add Redux and generate store from API spec.
